# soi-filesystem

./: CMakeLists.txt  README.md  main.cpp
docs/: design.md
src/: Directory.cpp  Directory.h  FreeBlocksBitmap.cpp  FreeBlocksBitmap.h  INode.cpp  INode.h  Superblock.cpp  Superblock.h  VirtualDisk.cpp  VirtualDisk.h  common.cpp  common.h  constants.h  main.cpp
